Fix default block json

--- a/packages/block-editor/public/index.html
+++ b/packages/block-editor/public/index.html
@@ -38,7 +38,16 @@
 						blockSidebar: null,
 						blockToolbar: null,
 					},
-					blockJson: null,
+					blockJson: {
+						name: "",
+						title: "",
+						description: "",
+						icon: "",
+						keywords: [],
+						category: "",
+						supports: {},
+						textdomain: "",
+					},
 					editorCss: "",
 					viewCss: "",
 				},
