--- a/packages/block-editor/public/index.html
+++ b/packages/block-editor/public/index.html
@@ -39,10 +39,10 @@
 						blockToolbar: null,
 					},
 					blockJson: {
-						name: "",
+						name: "blueprint-blocks/",
 						title: "",
 						description: "",
-						icon: "",
+						icon: "star-filled",
 						keywords: [],
 						category: "",
 						supports: {},
